# xontrib-cmd-durations

./: .yapf.style  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
xontrib/: cmd_done.py
xontrib/notifypy/: notify.py
