[tool.poetry]
name = "xontrib-cmd-durations"
version = "0.2.9"
description = "Send notification once long running command is finished. Add duration PROMP_FIELD."
authors = ["Noortheen Raja J <jnoortheen@gmail.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/jnoortheen/xontrib-cmd-durations"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
]


packages = [{ include = "xontrib" }]

[tool.poetry.urls]
Documentation = "https://github.com/jnoortheen/xontrib-cmd-durations/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-cmd-durations"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-cmd-durations/issues"


[tool.poetry.dependencies]
python = ">=3.6"
xonsh = ">=0.10"
notify-py = {version=">=0.3.3", python = ">=3.6,<4.0"}

[tool.poetry.dev-dependencies]
pytest = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
